Reuse ModuleBootstrap.decode()