@@ -379,7 +379,7 @@ public class NativeImageClassLoaderSupport {
     }
 
     protected List<Path> modulepath() {
-        return Stream.concat(imagemp.stream(), buildmp.stream()).collect(Collectors.toUnmodifiableList());
+        return Stream.concat(imagemp.stream(), buildmp.stream()).toList();
     }
 
     protected List<Path> applicationModulePath() {
@@ -397,7 +397,6 @@ public class NativeImageClassLoaderSupport {
         }
 
         processOption(NativeImageClassLoaderOptions.AddExports).forEach(val -> {
-            throwModuleGraphModificationOptionParseErrorIfInvalid("--add-exports", val);
             if (val.targetModules.isEmpty()) {
                 Modules.addExportsToAllUnnamed(val.module, val.packageName);
             } else {
@@ -407,7 +406,6 @@ public class NativeImageClassLoaderSupport {
             }
         });
         processOption(NativeImageClassLoaderOptions.AddOpens).forEach(val -> {
-            throwModuleGraphModificationOptionParseErrorIfInvalid("--add-opens", val);
             if (val.targetModules.isEmpty()) {
                 Modules.addOpensToAllUnnamed(val.module, val.packageName);
             } else {
@@ -427,16 +425,6 @@ public class NativeImageClassLoaderSupport {
         });
     }
 
-    private static void throwModuleGraphModificationOptionParseErrorIfInvalid(String option, AddExportsAndOpensAndReadsFormatValue val) {
-        if (val.packageName == null) {
-            /*
-             * Fail with RuntimeException, to ensure same behavior as when running on regular JVM.
-             */
-            System.err.println("Error occurred during initialization of boot layer");
-            throw new RuntimeException("Unable to parse " + option + " <module>/<package>: " + val.module.getName());
-        }
-    }
-
     private static void processListModulesOption(ModuleLayer layer) {
         Class<?> launcherHelperClass = ReflectionUtil.lookupClass(false, "sun.launcher.LauncherHelper");
         Method initOutputMethod = ReflectionUtil.lookupMethod(launcherHelperClass, "initOutput", boolean.class);
@@ -446,7 +434,7 @@ public class NativeImageClassLoaderSupport {
         for (ModuleLayer moduleLayer : allLayers(layer)) {
             List<ResolvedModule> resolvedModules = moduleLayer.configuration().modules().stream()
                             .sorted(Comparator.comparing(ResolvedModule::name))
-                            .collect(Collectors.toList());
+                            .toList();
             if (first) {
                 try {
                     initOutputMethod.invoke(null, false);
@@ -556,22 +544,41 @@ public class NativeImageClassLoaderSupport {
         String format = reads ? NativeImageClassLoaderOptions.AddReadsFormat : NativeImageClassLoaderOptions.AddExportsAndOpensFormat;
         String syntaxErrorMessage = " Allowed value format: " + format;
 
-        String[] modulePackageAndTargetModules = optionValue.split("=", 2);
-        if (modulePackageAndTargetModules.length != 2) {
-            throw userErrorAddExportsAndOpensAndReads(option, optionOrigin, optionValue, syntaxErrorMessage);
-        }
-        String modulePackage = modulePackageAndTargetModules[0];
-        String targetModuleNames = modulePackageAndTargetModules[1];
+        /*
+         * Parsing logic mimics jdk.internal.module.ModuleBootstrap.decode(String)
+         */
 
-        String[] moduleAndPackage = modulePackage.split("/");
-        if (moduleAndPackage.length > 1 + (reads ? 0 : 1)) {
+        int equalsPos = optionValue.indexOf("=");
+        if (equalsPos <= 0) {
             throw userErrorAddExportsAndOpensAndReads(option, optionOrigin, optionValue, syntaxErrorMessage);
         }
-        String moduleName = moduleAndPackage[0];
-        String packageName = moduleAndPackage.length > 1 ? moduleAndPackage[1] : null;
+
+        String modulePackage = optionValue.substring(0, equalsPos);
+        String targetModuleNames = optionValue.substring(equalsPos + 1);
+
+        if (targetModuleNames.isEmpty()) {
+            throw userErrorAddExportsAndOpensAndReads(option, optionOrigin, optionValue, syntaxErrorMessage);
+        }
 
         List<String> targetModuleNamesList = Arrays.asList(targetModuleNames.split(","));
         if (targetModuleNamesList.isEmpty()) {
+            throw userErrorAddExportsAndOpensAndReads(option, optionOrigin, optionValue, syntaxErrorMessage);
+        }
+
+        /*
+         * No need to check for duplicates in the targetModuleNamesList as it is not performed by
+         * j.i.m.ModuleBootstrap.decode()
+         */
+
+        String[] moduleAndPackage = modulePackage.split("/");
+        if (moduleAndPackage.length < 1 || moduleAndPackage.length > 1 + (reads ? 0 : 1)) {
+            throw userErrorAddExportsAndOpensAndReads(option, optionOrigin, optionValue, syntaxErrorMessage);
+        }
+
+        String moduleName = moduleAndPackage[0];
+        String packageName = moduleAndPackage.length > 1 ? moduleAndPackage[1] : "";
+
+        if (moduleName.isEmpty() || packageName.isEmpty()) {
             throw userErrorAddExportsAndOpensAndReads(option, optionOrigin, optionValue, syntaxErrorMessage);
         }
 
